Major performance and usability improvements (v2.0)
🚀 Performance Enhancements:
- Added comprehensive FIX tag definitions with human-readable field names
- Implemented real-time performance monitoring and optimization recommendations
- Added memory optimization with object pooling and GC optimization
- Enhanced logging with human-readable FIX message formatting
- Integrated performance metrics into Netty message handler

🔧 Code Quality Improvements:
- Updated FIXMessage interface to use FIXTags constants
- Added toReadableString() method for better debugging
- Enhanced FIXMessageHandler with performance monitoring
- Improved error handling and connection management
- Added comprehensive FIX tag library with 50+ field definitions

📚 Documentation:
- Completely rewritten README with comprehensive feature overview
- Added performance monitoring section with examples
- Enhanced architecture documentation with performance metrics
- Added troubleshooting and optimization guides
- Included interactive client usage examples

🛠 Developer Experience:
- Human-readable FIX message logging (e.g., MsgType=D(NewOrderSingle))
- Real-time performance recommendations
- Enhanced debug capabilities with detailed metrics
- Improved error messages with field name translation
- Better development workflow with performance insights

Features Added:
- FIXTags class with comprehensive tag definitions and utilities
- PerformanceOptimizer class with real-time metrics and recommendations
- Human-readable logging with FIXTags.formatForLogging()
- Performance monitoring integration in message handlers
- Memory optimization utilities and connection metrics
- Comprehensive README with architecture overview and usage examples